# personal-assistant-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dev.sh  docker-compose.yml  setup.sh
personal_assistant_demo/: CHATGPT_ISSUE_SUMMARY.md  CHATGPT_SUCCESS_REPORT.md  DEMO_VERIFICATION.md  ENTERPRISE_EXAMPLES.md  LINKEDIN_POSTS.md  LINKEDIN_SHOWCASE.md  LINKEDIN_STRATEGY_SUMMARY.md  ORGANIZATION_SUMMARY.md  PRE_COMMIT_TESTING_CHECKLIST.md  PROJECT_ORGANIZATION.md  QUICK_API_TEST.sh  README.md  WEB_TESTING_CHECKLIST.md  WEB_UI_FINAL_SUCCESS.md  WEB_UI_FIX_SUMMARY.md  examples.md  pyproject.toml  run_web_demo.py  test_web_demo.py
personal_assistant_demo/configs/: README.md  config-nim-react-fixed.yml  config-nim-react.yml  config-nim-tool-calling-conversation.yml  config-ollama-env.yml  config-ollama-react-enhanced.yml  config-ollama-react.yml  config-ollama-tool-calling.yml  config-ollama.yml  config-planner-executor.yml  config.yml
personal_assistant_demo/data/: clients.json  meetings.json  tasks.json
personal_assistant_demo/demo/: CONFIG_GUIDE.md  README.md  demo_showcase.py
personal_assistant_demo/demos/: showcase.py
personal_assistant_demo/demos/features/: demo_circuit_breakers.py  demo_dag_parallel.py  demo_telemetry.py  demo_validator.py
personal_assistant_demo/demos/web/: run_web.py  simple_web.py
personal_assistant_demo/demos/web/templates/: beautiful.html  index.html  index_classic.html  minimal.html  simple.html
personal_assistant_demo/docs/: PROJECT_ORGANIZATION.md  README.md  architecture.md  examples.md
personal_assistant_demo/src/personal_assistant/: __init__.py  conversation_memory.py  enhanced_react_handler.py  env_loader.py  register.py  web_server.py
personal_assistant_demo/src/personal_assistant/adapters/: nat.py  webui.py
personal_assistant_demo/src/personal_assistant/core/: agent.py  circuit_breaker.py  controller.py  dag.py  errors.py  registry.py  sanitizer.py  telemetry.py  validator.py
personal_assistant_demo/src/personal_assistant/data/: tool_registry.json
personal_assistant_demo/src/personal_assistant/legacy/: README.md  enhanced_planner_executor.py  enhanced_react_handler.py  planner_executor_agent.py  production_tool_registry.py
personal_assistant_demo/src/personal_assistant/tools/: __init__.py  _paths.py  calculator.py  client_management.py  datetime_info.py  meeting_scheduler.py  tasks.py  weather.py
personal_assistant_demo/src/personal_assistant/web/templates/: index.html  index_classic.html
personal_assistant_demo/tests/: test_config_path_resolution.py  test_mode_config_selection.py  test_path_centralization.py  test_tasks.py
personal_assistant_demo/tests/integration/: test_agent_pipeline.py  test_datetime_info.py
personal_assistant_demo/tests/unit/: test_mode_config_selection.py  test_validator.py
scripts/: quick_start.sh  start_web.py  test_api.sh
