[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "personal_assistant_demo"
version = "1.0.0"
dependencies = [
    "nvidia-nat[all]>=1.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "filelock>=3.13"
]
requires-python = ">=3.11,<3.13"
description = "Personal Assistant Demo using NeMo Agent Toolkit"
keywords = ["ai", "agents", "personal-assistant", "demo"]
classifiers = ["Programming Language :: Python"]

# Using nvidia-nat[all] for complete toolkit functionality

[project.entry-points.'nat.components']
personal_assistant = "personal_assistant.register"
